2013-04-12  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Reorganized source tree
    * Merged frontend/backend directories - one module per Java version
    * Added Java 6 module
    * Building of jar files and documentation is handled by toplevel
    Ant script
    * Only one toplevel ReadMe and license file
    * Removed extraneous DiffTask class

2013-02-13  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Version 7.1 released

2013-01-25  Jesper Öqvist <jesper@llbit.se>

    * Removed unused import java.util.LinkedHashSet

2013-01-23  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Moved PathPart and subclasses to separate .jadd file in Java1.4Frontend
    * Improved name checking error messages for TypeDecl
    * Package names are double-checked against canonical file names in
    order to avoid some problems on case-insensitive file systems.
    Trac ticket: http://svn.cs.lth.se/trac/jastadd-trac/ticket/99

2013-01-10  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed error in Java7Frontend/JavaPrettyPrinter.
      Properly escape backslash file separator.

2013-01-07  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Don't add system property `java.class.path` to classpath

2012-11-26  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Version 7.0 released

2012-11-23  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Updated to JastAdd2 version R20121122 (r889)

2012-11-14  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Updated to JastAdd2 version R20121114 (r887)

2012-11-09  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Updated to latest JastAdd2 version

2012-11-06  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * Fixed errors in parser rule for annotations, now it is closer to the JLS.
    Trac ticket: http://svn.cs.lth.se/trac/jastadd-trac/ticket/87

2012-11-02  Jesper Öqvist <jesper.oqvist@cs.lth.se>

    * JastAddJ prints an error message and exits with nonzero exit code when
    an unexpected exception occurs