@@ -3,3 +3,4 @@
 /src/gen
 /src/tmp
 /doc
+/jastaddj-*.zip
