@@ -1,40 +1,47 @@
-#!/bin/sh
+#!/bin/bash
 
 if [ $# -lt "1" ]; then
     echo "Usage: $0 VERSION"
     exit 1
 fi
 
-# set version string
 VERSION=$1
 
-echo "# Follow these steps to release JastAddJ-$VERSION:"
+echo "This will script will tag, build and upload jastaddj $VERSION" \
+	"to jastadd.org/releases/jastaddj/$VERSION"
+
+while true; do
+	read -p "Proceed? " yn
+	case $yn in 
+		[Yy]* ) break;;
+		[Nn]* ) exit;;
+		* ) echo "Please answer yes or no.";;
+	esac
+done
+
+echo "Bumping version strings..."
+echo "version=$VERSION" > src/res/JastAddJ.properties
+echo "version.short=$VERSION" >> src/res/JastAddJ.properties
+git commit -m "Bumped version strings" src/res/JastAddJ.properties
+
+echo "Tagging the release..."
+git tag -a $VERSION -m "Version $VERSION"
+
+echo "Creating source release..."
+ant release
+
+echo "Creating new directory at jastadd.org..."
+ssh login.cs.lth.se "mkdir /cs/jastadd/releases/jastaddj/$VERSION"
+
+echo "Uploading files to jastadd.org..."
+scp jastaddj-$VERSION.zip login.cs.lth.se:/cs/jastadd/releases/jastaddj/$VERSION
+
+echo "Setting group write permission for uploaded files..."
+ssh login.cs.lth.se "chmod -R g+w /cs/jastadd/releases/jastaddj/$VERSION"
+
 echo
-echo "# 1. Create the source-release zip file"
-echo "ant release -Dversion=$VERSION"
-echo
-echo "# 2. Create a new dir at jastadd.org"
-echo "ssh login.cs.lth.se \"mkdir /cs/jastadd/releases/jastaddj/$VERSION\""
-echo
-echo "# 3.1 Upload the zip files and appropriate documentation to jastadd.org"
-echo "scp jastaddj-$VERSION.zip \\"
-echo "    login.cs.lth.se:/cs/jastadd/releases/jastaddj/$VERSION"
-echo
-echo "# 3.2 Make sure the new files have group write permission"
-echo "ssh login.cs.lth.se \"chmod -R g+w /cs/jastadd/releases/jastaddj/$VERSION\""
-echo
-echo # Check that it works
-echo ------------------------------------------------------
-echo Browse to the website and check that everything works.
-echo Then ant clean and commit.
-echo ------------------------------------------------------
-echo
-echo "# 4. Tag in SVN"
-echo "svn copy http://svn.cs.lth.se/svn/jastadd-oxford/projects/trunk/JastAddJ \\"
-echo "    http://svn.cs.lth.se/svn/jastadd-oxford/projects/tags/JastAddJ/$VERSION \\"
-echo "    -m \"Release $VERSION of JastAddJ\""
-echo
-echo "# 5. Update stable branch"
-echo "svn copy http://svn.cs.lth.se/svn/jastadd-oxford/projects/trunk/JastAddJ \\"
-echo "    http://svn.cs.lth.se/svn/jastadd-oxford/projects/branches/JastAddJ-stable \\"
-echo "    -m \"Release $VERSION of JastAddJ\""
+echo "Check that it works!"
+echo "--------------------"
+echo "1. Browse to the website and check that everything looks okay."
+echo "2. Update the web pages to include links to the new release."
+echo "3. Push the changes to git."
