@@ -1,6 +1,2 @@
-version=7.1
-revision=R20130415
-JavaCompiler.name=Java Compiler
-JavaChecker.name=Java Checker
-JavaDumpTree.name=Java Dump Tree
-JavaPrettyPrinter.name=Java Pretty Printer
+version=7.1-7-gdac5f6e
+version.short=7.1
