@@ -1,3 +1,7 @@
+2013-05-06  Jesper Öqvist <jesper.oqvist@cs.lth.se>
+
+    * Added version string bumping script
+
 2013-04-12  Jesper Öqvist <jesper.oqvist@cs.lth.se>
 
     * Reorganized source tree
